add bubble attacks and animations

--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Sharkie</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>  
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src="./models/drawable-object.class.js"></script>  
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/puffer-fish.class.js"></script>
+    <script src="./models/status-bar.class.js"></script>
+    <script src="./models/coin-bar.class.js"></script>
+    <script src="./models/poison-bar.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/background-objects.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./models/jelly-fish.class.js"></script>
+    <script src="./models/bubble.class.js"></script>
+    <script src="./models/poison-bubble.class.js"></script>
     <script src="./levels/level1.js"></script>
     <script src='./js/game.js'></script>
 </head>
