add coins and poisons and some animations

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="./models/level.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./models/jelly-fish.class.js"></script>
+    <script src="./models/coin.class.js"></script>
+    <script src="./models/poison.class.js"></script>
     <script src="./models/bubble.class.js"></script>
     <script src="./models/poison-bubble.class.js"></script>
     <script src="./levels/level1.js"></script>
