--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./models/bubble.class.js"></script>
     <script src="./models/poison-bubble.class.js"></script>
     <script src="./levels/level1.js"></script>
+    <script src="./models/start-screen.class.js"></script>
     <script src='./js/game.js'></script>
 </head>
 <body onload="init()">
