add startscreen and mouse event

--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
     <script src="./models/poison-bubble.class.js"></script>
     <script src="./levels/level1.js"></script>
     <script src="./models/start-screen.class.js"></script>
+    <script src="./models/start-button.class.js"></script>
     <script src='./js/game.js'></script>
 </head>
 <body onload="init()">
     <h1>Sharkie - The Game</h1>
 
     <canvas height="480" width="720" id="canvas"></canvas>
+
+    <!-- <img src="img/6.Botones/Start/1.png" id="startButton"> -->
 </body>
 </html>
