update endscreen and fix bubbles

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./levels/level1.js"></script>
     <script src="./models/start-screen.class.js"></script>
     <script src="./models/start-button.class.js"></script>
+    <script src="./models/end-screen-lose.class.js"></script>
     <script src='./js/game.js'></script>
 </head>
 <body onload="init()">
