--- a/index.html
+++ b/index.html
@@ -41,32 +41,108 @@
             <div class="arrow-keys-container">
                 <div class="arrow-keys">
                     <div class="upper-arrow">
-                        <div class="arrow-outer-line">
-                            <div class="arrow-inner-line">
-                                <div class="triangle-up"></div>
+                        <div class="outer-line">
+                            <div class="inner-line">
+                                <div class="triangle-up">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <svg viewBox="105.896 76.028 24 24" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:bx="https://boxy-svg.com">
+                                        <path d="M 117.896 76.028 L 129.896 100.028 L 105.896 100.028 L 117.896 76.028 Z"
+                                            style="fill: rgb(83, 26, 130);"
+                                            transform="matrix(1, 0, 0, 1, 3.552713678800501e-15, 3.552713678800501e-15)"
+                                            bx:shape="triangle 105.896 76.028 24 24 0.5 0 1@6251486b" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="other-arrows">
-                        <div class="arrow-outer-line">
-                            <div class="arrow-inner-line">
-                                <div class="triangle-left"></div>
+                        <div class="outer-line">
+                            <div class="inner-line">
+                                <div class="triangle-left">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <svg viewBox="105.896 76.028 24 24" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:bx="https://boxy-svg.com">
+                                        <path d="M 117.896 76.028 L 129.896 100.028 L 105.896 100.028 L 117.896 76.028 Z"
+                                            style="fill: rgb(83, 26, 130);"
+                                            transform="matrix(1, 0, 0, 1, 3.552713678800501e-15, 3.552713678800501e-15)"
+                                            bx:shape="triangle 105.896 76.028 24 24 0.5 0 1@6251486b" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <div class="arrow-outer-line">
-                            <div class="arrow-inner-line">
-                                <div class="triangle-down"></div>
+                        <div class="outer-line">
+                            <div class="inner-line">
+                                <div class="triangle-down">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <svg viewBox="105.896 76.028 24 24" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:bx="https://boxy-svg.com">
+                                        <path d="M 117.896 76.028 L 129.896 100.028 L 105.896 100.028 L 117.896 76.028 Z"
+                                            style="fill: rgb(83, 26, 130);"
+                                            transform="matrix(1, 0, 0, 1, 3.552713678800501e-15, 3.552713678800501e-15)"
+                                            bx:shape="triangle 105.896 76.028 24 24 0.5 0 1@6251486b" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <div class="arrow-outer-line">
-                            <div class="arrow-inner-line">
-                                <div class="triangle-right"></div>
+                        <div class="outer-line">
+                            <div class="inner-line">
+                                <div class="triangle-right">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <svg viewBox="105.896 76.028 24 24" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:bx="https://boxy-svg.com">
+                                        <path d="M 117.896 76.028 L 129.896 100.028 L 105.896 100.028 L 117.896 76.028 Z"
+                                            style="fill: rgb(83, 26, 130);"
+                                            transform="matrix(1, 0, 0, 1, 3.552713678800501e-15, 3.552713678800501e-15)"
+                                            bx:shape="triangle 105.896 76.028 24 24 0.5 0 1@6251486b" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="instrction-text">
-
+                    <h2>- MOVE SHARKIE</h2>
+                </div>
+            </div>
+            <div class="attack-keys-container">
+                <div class="space-key-container">
+                    <div class="space-key">
+                        <div class="space-outer-line">
+                            <div class="space-inner-line">
+                                <div class="space-text">
+                                    <h3>SPACE-BAR</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="instrction-text">
+                        <h2>- ATTACK</h2>
+                    </div>
+                </div>
+                <div class="d-key-container">
+                    <div class="key">
+                        <div class="outer-line">
+                            <div class="inner-line">
+                                <div class="d-text">
+                                    <h3>D</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="instrction-text">
+                        <h2>- Bubble</h2>
+                    </div>
+                </div>
+                <div class="f-key-container">
+                    <div class="key">
+                        <div class="outer-line">
+                            <div class="inner-line">
+                                <div class="f-text">
+                                    <h3>F</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="instrction-text">
+                        <h2>- Poison-Bubble</h2>
+                    </div>
                 </div>
             </div>
         </div>
