--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="space-outer-line">
                             <div class="space-inner-line">
                                 <div class="space-text">
-                                    <h3>SPACE-BAR</h3>
+                                    <h3>SPACE BAR</h3>
                                 </div>
                             </div>
                         </div>
