--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
                         <h2>- Bubble</h2>
                     </div>
                 </div>
-                <div class="f-key-container">
+                <div class="s-key-container">
                     <div class="key">
                         <div class="outer-line">
                             <div class="inner-line">
-                                <div class="f-text">
-                                    <h3>F</h3>
+                                <div class="s-text">
+                                    <h3>S</h3>
                                 </div>
                             </div>
                         </div>
