--- a/index.html
+++ b/index.html
@@ -37,28 +37,25 @@
         <main>
             <canvas height="480" width="720" id="canvas"></canvas>
 
-            <div class="hud-main-conainer" id="hud">
-                <div class="top-container">
-                    <img src="./img/hud/musik_on.png" alt>
-                    <img src="./img/hud/fullscreen.png" alt>
+            <div class="top-container">
+                <img src="./img/hud/musik_on.png" id="muteButton"
+                    onclick="muteGameMusik()">
+                <img src="./img/hud/fullscreen.png" id="fullscreenButton" alt>
+            </div>
+            <div class="arrow-container d-none" id="arrowsButtons">
+                <div>
+                    <img src="./img/hud/arrow_up.png" id="upBtn" alt>
                 </div>
-                <div class="bottom-container">
-                    <div class="arrow-container">
-                        <div>
-                            <img src="./img/hud/arrow_up.png" alt>
-                        </div>
-                        <div>
-                            <img src="./img/hud/arrow_left.png" alt>
-                            <img src="./img/hud/arrow_down.png" alt>
-                            <img src="./img/hud/arrow_right.png" alt>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="./img/hud/poison_bubble_attack.png" alt="">
-                        <img src="./img/hud/bubble_attack.png" alt="">
-                        <img src="./img/hud/attack.png" alt="">
-                    </div>
+                <div>
+                    <img src="./img/hud/arrow_left.png" id="leftBtn" alt>
+                    <img src="./img/hud/arrow_down.png" id="downBtn" alt>
+                    <img src="./img/hud/arrow_right.png" id="rightBtn" alt>
                 </div>
+            </div>
+            <div class="attack-container d-none" id="attackButtons">
+                <img src="./img/hud/poison_bubble_attack.png" id="poisonBtn" alt>
+                <img src="./img/hud/bubble_attack.png" id="bubbleBtn" alt>
+                <img src="./img/hud/attack.png" id="attackBtn" alt>
             </div>
         </main>
 
