--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <canvas height="480" width="720" id="canvas"></canvas>
 
             <div class="start-button" id="startButton" onclick="world.startGame(); activateStartButton()"></div>
-            <div class="retry-button" id="retryButton" onclick="world.startGame()"></div>
+            <div class="retry-button d-none" id="retryButton" onclick="world.startGame()"></div>
 
             <div class="top-container">
                 <img src="./img/hud/musik_on.png" id="muteButton" onclick="muteGameMusik()">
