bugfix and doc release alpha v1.0

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
             <div class="start-button" id="startButton" onclick="world.startGame(); activateStartButton()"></div>
             <div class="retry-button d-none" id="retryButton" onclick="world.startGame()"></div>
+            <div class="alert-container d-none" id="alertContainer">Please Turn Your Phone</div>
 
-            <div class="top-container">
+            <div class="top-container" id="topContainer">
                 <img src="./img/hud/musik_on.png" id="muteButton" onclick="muteGameMusik()">
                 <img src="./img/hud/fullscreen.png" id="fullscreenButton" onclick="switchFullscreen()">
             </div>
